fix(Tinebase/X-Tool): wrong position of arrows
Reviewed-on: http://gerrit.tine20.com/customers/17129
Tested-by: Philipp Schüle <p.schuele@metaways.de>

--- a/tine20/Tinebase/css/Tinebase.css
+++ b/tine20/Tinebase/css/Tinebase.css
@@ -20,15 +20,6 @@ html, body {
 
 /* ----- ext fixes -------------------------------------------------------------*/
 
-/* x-tool arrow (exception dialog) */
-.x-panel-collapsed .x-tool {
-    background-image:url(../../images/icon-set/icon_arrow_down.svg);
-}
-
-.x-tool {
-    background-image: url(../../images/icon-set/icon_arrow_up.svg);
-}
-
 /* auto column sizing */
 .x-grid3-hd-row td {
     box-sizing: border-box;
